--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       href="https://st.depositphotos.com/2288675/2452/i/450/depositphotos_24522515-stock-photo-blank-yellow-sticky-note.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Smart Notepad</title>
   </head>
   <body>
-    <img class="imgg" src="note.png" alt="" />
+    <img class="imgg" src="note2.png" alt="" />
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
